--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: yarn install --frozen-lockfile
       - run: yarn build
 
   publish-npm:
@@ -23,6 +24,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: npm publish
         env:
