--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "@vueuse/shared": "^9.2.0",
     "rollup": "^2.78.1",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.54.9",
     "tslib": "^2.4.0",
@@ -51,8 +52,5 @@
   },
   "peerDependencies": {
     "vue": "^3.0.0"
-  },
-  "dependencies": {
-    "rollup-plugin-dts": "^4.2.2"
   }
 }
