--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,16 +3,21 @@ name: Publish to NPM
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: yarn
+          cache: 'yarn'
+      
+      - run: yarn install --frozen-lockfile
+
       - run: yarn build
 
   publish-npm:
