--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     }
   },
   "main": "./dist/index.cjs.js",
-  "module": "./dist/index.es.js",
+  "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*",
