--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "include": [
-    "env.d.ts",
-    "src/**/*.ts",
-  ],
+  "include": ["env.d.ts", "src/**/*.ts"],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "lib": ["esnext", "dom"],
